<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="112dp"
    android:padding="24dp">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/history_import_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        app:hideAnimationBehavior="inward"
        app:showAnimationBehavior="inward"
        app:trackColor="?attr/colorSurfaceVariant"
        app:trackCornerRadius="2dp" />

</FrameLayout>
